# personal-curation-bot

./: .gitignore  README.md  pyproject.toml
config/: categories.json
docs/: INSTAGRAM_DEVICE_AUTOMATION_LANE.md
src/curation_bot/: __init__.py  apify_capture.py  cli.py  core.py  instagram_accounts.py  instagram_accounts_cli.py  instagram_automation.py  instagram_login.py  paths.py  telegram_intake.py
tests/: test_apify_capture.py  test_core.py  test_instagram_accounts.py  test_instagram_automation.py  test_telegram_intake.py
