[project]
name = "personal-curation-bot"
version = "0.1.0"
description = "Private local-first personal curation bot for Simon"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.61.0",
]

[project.scripts]
curation-bot = "curation_bot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
